--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+#Image files
+*.png
+*.jpg
+
 
 # Created by https://www.gitignore.io/api/c++,visualstudio
 # Edit at https://www.gitignore.io/?templates=c++,visualstudio
