--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,3 @@
-#Image files
-*.png
-*.jpg
-
-
 # Created by https://www.gitignore.io/api/c++,visualstudio
 # Edit at https://www.gitignore.io/?templates=c++,visualstudio
 
@@ -375,3 +370,12 @@ ASALocalRun/
 .localhistory/
 
 # End of https://www.gitignore.io/api/c++,visualstudio
+
+#custom
+
+# Config files linking libraries
+!**/*.suo
+
+#Image files
+*.png
+*.jpg
