openCL runs, but wrong image is generated

--- a/TBB_example02/TBB_example02.vcxproj
+++ b/TBB_example02/TBB_example02.vcxproj
@@ -162,7 +162,7 @@
     <ClInclude Include="setup_cl.h" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="voronoi.cl" />
+    <None Include="julia.cl" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
